# MMN

./: .gitignore  .replit  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
examples/: build_report.py  sample_market.json
mmn/: __init__.py  chart.py  cli.py  curves.py  fees.py  ft_api.py  live_report.py  live_simulator.py  montecarlo.py  runtime.py  simulator.py
static/: app.js  style.css
templates/: index.html
tests/: test_app.py  test_cli.py  test_curves.py  test_ft_api.py  test_live.py  test_montecarlo.py  test_runtime.py  test_simulator.py
