[project]
name = "mmn"
version = "0.1.0"
description = "42 / Event Rush offline buyer-profitability sandbox (Quart/ASGI + uvloop)"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19",
    "uvicorn[standard]>=0.30",
    "uvloop>=0.21 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "ty>=0.0.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["mmn", "app.py"]
